crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_0.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│ fn very_long_function_name│ 
│     // content            │ 
│ }                         │ 
│                           │ 
└▀▀▀▀▀▀▀▀───────────────────┘
