crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_1.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│ n very_long_function_name_│ 
│    // content             │ 
│                           │ 
│                           │ 
└▀▀▀▀▀▀▀▀───────────────────┘
