crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_2.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│  very_long_function_name_t│ 
│   // content              │ 
│                           │ 
│                           │ 
└─▀▀▀▀▀▀▀▀──────────────────┘
