crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_4.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│ ery_long_function_name_tha│ 
│ // content                │ 
│                           │ 
│                           │ 
└─▀▀▀▀▀▀▀▀──────────────────┘
