crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_5.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│ ry_long_function_name_that│ 
│ / content                 │ 
│                           │ 
│                           │ 
└──▀▀▀▀▀▀▀▀─────────────────┘
