crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_6.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│ y_long_function_name_that_│ 
│  content                  │ 
│                           │ 
│                           │ 
└──▀▀▀▀▀▀▀▀─────────────────┘
