crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_7.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│ _long_function_name_that_e│ 
│ content                   │ 
│                           │ 
│                           │ 
└──▀▀▀▀▀▀▀▀─────────────────┘
