crates/chatui-markdown/src/snapshots/chatui_markdown__tests__offset_8.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust───────────────────────┐ 
│ long_function_name_that_ex│ 
│ ontent                    │ 
│                           │ 
│                           │ 
└──▀▀▀▀▀▀▀▀─────────────────┘
