crates/chatui-markdown/src/snapshots/chatui_markdown__tests__render_code_block.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
┌rust─────────────────────────────────────────────────────────────────────────┐ 
│ fn main() {}                                                                │ 
│                                                                             │ 
└─────────────────────────────────────────────────────────────────────────────┘
