crates/chatui-markdown/src/snapshots/chatui_markdown__tests__render_heading.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
Title H1                                                                        
                                                                                
Title H2
