crates/chatui-markdown/src/snapshots/chatui_markdown__tests__render_list.snap
---
source: crates/chatui-markdown/src/tests.rs
expression: rendered
---
- Item 1                                                                        
- Item 2                                                                        
                                                                                
1. Ordered                                                                      
2. Items
